Resolve help message, checkstyle issues